--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "version": "1.0.0",
   "main": "index.js",
   "dependencies": {
+    "bad-words": "^3.0.3",
     "express": "^4.17.1",
     "socket.io": "^2.3.0"
   },
